# alienarena

./: Alien Arena.bat  AlienArenaDedicated  CMD.html  CMD.md  COPYING  CVAR.html  CVAR.md  INSTALL  Makefile.am  Makefile.in  README  README.txt  aclocal.m4  alienarena_w32.props  alienarena_w32.sln  configure  configure.ac  convert_md_to_html.sh  crded.i386  crded.x86_64  crx.i386  crx.sdl.i386  crx.sdl.x86_64  crx.x86_64  game_data.am
7.53/: Makefile.am  aclocal.m4
7.53/vs2010/: libvorbisfile.vcxproj
branches/autotools-branch/: Makefile.am  Makefile.in  aclocal.m4  alienarena_w32.props  alienarena_w32.sln  alienarena_win32.props  alienarena_win32.sln  configure  configure.ac  game_data.am
branches/unix_build/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
data1/botinfo/: Makefile.am  Makefile.in  allbots.tmp  aoa-morpheus.tmp  dm-atlantis2k8.tmp
data1/levelshots/: Makefile.am  Makefile.in  aoa-frost.txt  aoa-zorn.tga  ctf-abyss.txt  ctf-frost.txt  ctf-violator2k16.txt  ctf-zion.txt  db-vesuvius.txt  dm-blood.tga  dm-dismal.tga  dm-dismal.txt  dm-eternal.tga  dm-frontier2.txt  dm-grindery.tga  dm-grindery.txt  dm-liberation.tga  dm-liberation.txt  dm-omega2k8.txt  dm-purgatory2k16_p.tga  dm-titan.tga  dm-turbo.tga  dm-warmachine.tga
data1/maps/: Makefile.am  Makefile.in  aaplayerpose.bsp  aoa-corrosion.bsp  aoa2.bsp  compile.bat  cp-ribeye.bsp  ctf-abyss.bsp  ctf-atlantis.bsp  ctf-corrosion.bsp  ctf-europa2k8.bsp  ctf-icarus.bsp  ctf-titan.bsp  ctf-violator.bsp  ctf-violator2k16.bsp  dm-annhiliation.bsp  dm-annihilation.lightmap  dm-aquous.bsp  dm-atlantis.bsp  dm-atlantis2k8.bsp  dm-babel2k16.bsp  dm-babel2k16.lightmap  dm-bloodfactory.bsp  dm-bloodfactory2k12.bsp  dm-bloodfactory2k15.bsp  dm-bloodfactory2k15.lightmap  dm-chasmatic2k9.bsp  dm-corrosion.bsp  dm-crucible2k16.bsp  dm-crucible2k16.lightmap  dm-deathray.bsp  dm-deathray2k16.bsp  dm-deimos2k9.bsp  dm-dismal.bsp  dm-dynamo.bsp  dm-dynamo2k16.bsp  dm-dynamo2k8.bsp  dm-electro.bsp  dm-eternal.bsp  dm-europa.bsp  (+33 more)
data1/models/: Makefile.am  Makefile.in
data1/pics/: Makefile.am  Makefile.in  anum_8.tga  anum_minus.tga  blueplayerbox.tga  bomber.tga  chaingun.tga  conback.pcx  conback.tga  conchars.pcx  discord.tga  discordHighlight.tga  disruptor.tga  grapple.tga  i_disruptor.tga  i_health.tga  i_hud_beamgun.tga  i_hud_blaster.tga  i_hud_chaingun.tga  i_hud_flamethrower.tga  i_hud_rocketlauncher.tga  i_hud_smartgun.tga  i_hud_vaporizor.tga  i_hud_violator.tga  i_score.tga  i_team1.tga  m_banner_multiplayer.tga  m_banner_options.tga  m_banner_video.tga  m_controls.tga  m_controls_back.tga  m_dmoptions.tga  m_irc.tga  m_joinserver.tga  m_main.tga  m_main_game.tga  m_main_mont0.tga  m_main_mont1.tga  m_main_mont2.tga  m_main_mont3.tga  (+27 more)
data1/players/: Makefile.am  Makefile.in
data1/scripts/: Makefile.am  Makefile.in  caustics.rscript  consoles.rscript  fb_fragment_shader.glsl  fragment_shader.glsl  liquids.shader  menu.rscript  mesh_fragment_shader.glsl  mesh_vertex_shader.glsl  models.rscript  players.rscript  textures.rscript  trans.shader  vertex_shader.glsl  water1.arbf  water_fragment_shader.glsl
data1/vehicles/: Makefile.am  Makefile.in
source/: Makefile  Makefile.am  Makefile.in  codered.dsp  codered.sln  codered.vcproj  run_splint.sh
source/client/: cl_cin.c  cl_ents.c  cl_fx.c  cl_http.c  cl_input.c  cl_inv.c  cl_irc.c  cl_main.c  cl_parse.c  cl_pred.c  cl_scrn.c  cl_stats.c  cl_tent.c  cl_updates.c  cl_view.c  client.h  console.c  keys.c  keys.h  menu.c  qal.c  qal.h  qmenu.c  qmenu.h  ref.h  screen.h  snd_dma.c  snd_loc.h  snd_mix.c  snd_openal.c  sound.h  vid.h  vid_menu.c
source/game/: c_cam.c  cow.c  cow.h  ctf.c  g_ai.c  g_chase.c  g_cmds.c  g_combat.c  g_cow.c  g_ctf.c  g_deathball.c  g_deathray.c  g_func.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_phys.c  g_save.c  g_spawn.c  g_spider.c  g_svcmds.c  g_target.c  g_trigger.c  g_unlagged.c  g_utils.c  g_vehicles.c  g_weapon.c  game.dsp  game.h  game.plg  game.vcproj  m_player.h  p_client.c  p_hud.c  p_view.c  p_weapon.c  q_shared.c  q_shared.h
source/linux/: Makefile  glob.c  qgl_linux.c  rw_unix.c  snd_linux.c  snd_mixa.s  snd_sdl.c  sys_linux.c  vid_menu.c
source/null/: cl_null.c
source/qcommon/: cmd.c  cmodel.c  common.c  cryptohash.c  cvar.c  files.c  image.c  libgarland.c  libgarland.h  md5.c  net_chan.c  pmove.c  qcommon.h  qfiles.h  terrain.c
source/ref_gl/: glfuncs.h  qgl.h  r_bloom.c  r_bmfont.c  r_decals.c  r_draw.c  r_image.c  r_image.h  r_iqm.c  r_iqm.h  r_light.c  r_local.h  r_main.c  r_mapscript.cpp  r_math.c  r_math.h  r_md2.c  r_mesh.c  r_misc.c  r_model.c  r_model.h  r_particle.c  r_postprocess.c  r_program.c  r_ragdoll.c  r_ragdoll.h  r_refl.c  r_refl.h  r_script.c  r_script.h  r_shadowmaps.c  r_shadows.c  r_surf.c  r_terrain.c  r_text.c  r_text.h  r_ttf.c  r_varray.c  r_vbo.c  r_vlights.c  (+1 more)
source/server/: server.h  sv_ccmds.c  sv_ents.c  sv_game.c  sv_init.c  sv_main.c  sv_send.c  sv_user.c  sv_world.c
source/unix/: Makefile  gl_glx.c  glob.c  glw_unix.h  net_udp.c  q_shunix.c  qal_unix.c  qgl_unix.c  rw_unix.c  snd_sdl.c  snd_unix.c  sys_unix.c  vid_menu.c  vid_so.c
source/win32/: glw_imp.c  in_win.c  net_wins.c  q2.rc  q_shwin.c  qal_win.c  qgl_win.c  resource.h  sys_win.c  vid_dll.c  vid_menu.c  winquake.h
trunk/: Alien Arena Server.bat  AlienArena  AlienArenaDedicated  AlienArenaSDL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  alienarena.xpm  alienarena_w32.props  alienarena_w32.sln  configure  configure.ac  crded.i386  crded.x86_64  crx.i386  crx.sdl.i386  crx.sdl.x86_64  crx.x86_64  game_data.am
trunk/arena/: default.cfg  maps.lst  motd.txt  server.cfg
trunk/botinfo/: aoa-frost.tmp  bots.tmp  dm-babel.tmp  dm-beyond.tmp  dm-bloodfactory2k12.tmp  dm-chasmatic2k9.tmp  dm-deimos.tmp  dm-dismal.tmp  dm-dynamo.tmp  dm-furious2k8.tmp  dm-impact.tmp  dm-leviathan.tmp  dm-omega.tmp  dm-redred.tmp  dm-warmachine.tmp  tac-extermination.tmp
trunk/config/: config.h.in
trunk/data1/: Makefile.in  aclocal.m4  configure  configure.ac  default.cfg  maps.lst
(+6229 files in other folders)
